--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <form action="javascript:void(0);" method="POST" id="saveEdit">
             <input type="text" id="edit-name">
-            <input type="submit" value="Edit"/><a onclick="closeIput()" aria-label="Close">&#10006;</a>
+            <input type="submit" value="Edit"/><button type="button" onclick="closeInput()" aria-label="Close">&#10006;</button>
 
         </form>
     </div>
